[package]
name = "kramer"
version = "0.1.0"
edition = "2021"

[dependencies]
# For clap info, see [dependencies.clap]
libc = "0.2.169"
ron = "0.8.1"
serde = { version = "~1.0.217", features = ["derive"] }

[dependencies.clap]
version = "4.5.30"
default-features = false
features = [
    # From default features collection
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",

    # Optional features
    "derive",
]
