[package]
name = "kramer"
version = "0.1.0"
edition = "2021"

[dependencies]
# NOTE:
# = X.X.X is the version used in testing.
# Use this version for greatest compatibility.
#
# For clap info, see [dependencies.clap]
# For serde info, see [dependencies.serde]
libc = "0.2.170"
ron = "0.8.1, >=0.8, <0.9"
rust-i18n = "3.1.3"

[dependencies.clap]
version = "4.5.30, >=4.5.27, <=4.5.30"
default-features = false
features = [
    # From default features collection
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",

    # Optional features
    "derive",
]

[dependencies.serde]
version = "1.0.218, >=1.0.217, <=1.0.218"
features = ["derive"]
